--- a/board_project/README
+++ b/board_project/README
@@ -5,5 +5,6 @@ Output: PWM followed by a low pass filter to act as a D/A converter
 Control: microprocessor frequency
 
 Two board simulation options (to be renamed PPSControl.c): either using the 
-unix alarm signal, or the GLUT option which might extend the compatibility 
-beyond unix. Accuracy performances seem similar for both delay implementations.
+unix alarm signal (default), or the GLUT option which might extend the 
+compatibility beyond unix. Accuracy performances seem similar for both delay 
+implementations.
