--- a/board_project/README
+++ b/board_project/README
@@ -11,7 +11,7 @@ implementations.
 
 Requires simavr, available at https://github.com/buserror/simavr
 1. clone simavr
-2. copy this directory in the example subdirectory of simavr
+2. copy this directory in the examples subdirectory of simavr
 3. install libelf-dev if not available (required dependency)
 4. in simavr: make
 will recursively compile all board examples including the content of this directory.
