--- a/board_project/README
+++ b/board_project/README
@@ -1,13 +1,7 @@
-Input: 1-PPS from GPS receiver, simulated with a sigalarm from the PC running 
-       a unix flavor. This signal is detected as a GPIO state change and
-       timestamped using a timer input capture.
-Output: PWM followed by a low pass filter to act as a D/A converter
+Input:   1-PPS from GPS receiver connected to Timer 3 input capture
+         also connected to GPIO INT2 pin
+Output:  PWM followed by a low pass filter to act as a D/A converter
 Control: microprocessor frequency
-
-Two board simulation options (to be renamed PPSControl.c): either using the 
-unix alarm signal (default), or the GLUT option which might extend the 
-compatibility beyond unix. Accuracy performances seem similar for both delay 
-implementations.
 
 Requires simavr, available at https://github.com/buserror/simavr
 1. clone simavr
@@ -15,3 +9,13 @@ Requires simavr, available at https://github.com/buserror/simavr
 3. install libelf-dev if not available (required dependency)
 4. in simavr: make
 will recursively compile all board examples including the content of this directory.
+
+The graphical user interface requires libdevil [1], installed on Debian GNU/Linux with
+apt-get install libdevil-dev
+If not available, remove support for the GUI (not mandatory) by replacing
+#define with_GUI
+with
+#undef with_GUI
+
+[1] libdevil-dev - Cross-platform image loading and manipulation toolkit
+
